--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,11 @@ Logs and Data
 *.log
 data/
 datasets/
+
+# Ignore Python virtual environment
+venv/
+# Ignore Keras / TensorFlow model files
+*.h5
+*.keras
+# If using Git LFS, you can later track model files with .gitattributes
+# e.g. add a .gitattributes entry: "*.h5 filter=lfs diff=lfs merge=lfs -text"
